# ChangeLog for dev-perl/Class-MOP
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Class-MOP/ChangeLog,v 1.32 2009/12/19 11:46:53 tove Exp $

  19 Dec 2009; Torsten Veller <tove@gentoo.org> Class-MOP-0.97.ebuild:
  Drop ExtUtils-CBuilder dependency

*Class-MOP-0.97 (19 Dec 2009)

  19 Dec 2009; Torsten Veller <tove@gentoo.org> Class-MOP-0.95.ebuild,
  +Class-MOP-0.97.ebuild:
  Version bump. Depend on dev-perl/Try-Tiny

  02 Dec 2009; Torsten Veller <tove@gentoo.org> Class-MOP-0.94.ebuild:
  Stable on amd64 and x86 (#293622)

*Class-MOP-0.95 (22 Nov 2009)

  22 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> +Class-MOP-0.95.ebuild:
  Version bump via perl-bump experimental tool.

  26 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> Class-MOP-0.94.ebuild:
  Keywording for ppc, bug 283244

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -Class-MOP-0.92.ebuild,
  -Class-MOP-0.93.ebuild:
  Cleanup

*Class-MOP-0.94 (23 Sep 2009)

  23 Sep 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.94.ebuild:
  Version bump

*Class-MOP-0.93 (17 Sep 2009)

  17 Sep 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.93.ebuild:
  Version bump

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -Class-MOP-0.89.ebuild,
  -Class-MOP-0.90.ebuild, -Class-MOP-0.91.ebuild:
  Cleanup

*Class-MOP-0.92 (15 Aug 2009)

  15 Aug 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.92.ebuild:
  Version bump

*Class-MOP-0.91 (02 Aug 2009)

  02 Aug 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.91.ebuild:
  Version bump

*Class-MOP-0.90 (22 Jul 2009)

  22 Jul 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.90.ebuild:
  Version bump

  16 Jul 2009; Torsten Veller <tove@gentoo.org> -Class-MOP-0.84.ebuild,
  -Class-MOP-0.85.ebuild, -Class-MOP-0.86.ebuild, -Class-MOP-0.87.ebuild,
  -Class-MOP-0.88.ebuild:
  Cleanup

*Class-MOP-0.89 (04 Jul 2009)
