@@ -1,0 +1,28 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Class-MOP/Attic/Class-MOP-0.98.ebuild,v 1.1 2010/01/21 20:04:59 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=DROLSKY
+inherit perl-module
+
+DESCRIPTION="A Meta Object Protocol for Perl 5"
+
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~x86"
+IUSE="test"
+
+RDEPEND="
+	>=virtual/perl-Scalar-List-Utils-1.18
+	>=dev-perl/Sub-Name-0.04
+	>=dev-perl/Sub-Identify-0.03
+	>=dev-perl/Try-Tiny-0.02
+	>=dev-perl/MRO-Compat-0.05
+	dev-perl/Devel-GlobalDestruction"
+DEPEND="${RDEPEND}
+	test? ( >=virtual/perl-Test-Simple-0.88
+		>=dev-perl/Test-Exception-0.27
+		dev-perl/Test-Output )"
+
+SRC_TEST=do
