@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Moose
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Moose/ChangeLog,v 1.35 2009/12/02 10:05:59 tove Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Moose/ChangeLog,v 1.36 2010/01/21 20:06:10 tove Exp $
+
+*Moose-0.94 (21 Jan 2010)
+
+  21 Jan 2010; Torsten Veller <tove@gentoo.org> +Moose-0.94.ebuild:
+  Version bump
 
   02 Dec 2009; Torsten Veller <tove@gentoo.org> Moose-0.92.ebuild:
   Stable on amd64 and x86 (#293622)
