@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Class-MOP
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Class-MOP/ChangeLog,v 1.32 2009/12/19 11:46:53 tove Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Class-MOP/ChangeLog,v 1.33 2010/01/21 20:04:59 tove Exp $
+
+*Class-MOP-0.98 (21 Jan 2010)
+
+  21 Jan 2010; Torsten Veller <tove@gentoo.org> +Class-MOP-0.98.ebuild:
+  Version bump
 
   19 Dec 2009; Torsten Veller <tove@gentoo.org> Class-MOP-0.97.ebuild:
   Drop ExtUtils-CBuilder dependency
